# autobossfight_rematched

./: .gitignore  CMakeLists.txt  README.md  attack.c  attack.h  attack_manager.c  attack_manager.h  boss.c  boss.h  energize_entities.c  entity.c  entity.h  init.c  main.c  player.c  player.h  players.c  register_attacks.c  rng.c  rng.h
attacks/: CMakeLists.txt  attack.h  attack_combo.c  attack_full_power.c  attack_heal.c  attack_manager.c  attack_manager.h  attack_normal.c  attack_nothing.c  attack_revive.c  attacks.h  default_attack.c  get_applicable_entities.c
attacks/attacks/: attack_combo.c  attack_full_power.c  attack_half.c  attack_heal.c  attack_normal.c  attack_nothing.c  attack_revive.c  attack_transform.c
attacks/linked_list/: list.h
entity/: entities.c
entity_manager/: entities.c
registration/: CMakeLists.txt  registration.c  registration.h
registration/linked_list/: list.c
tests/: buffer-test.c
transformations/: CMakeLists.txt  default_transformation.c  register_transformations.c  transform_base.c  transform_boss.c  transformation.h  transformation_manager.c  transformation_manager.h  transformation_menu.c
transformations/transformations/: transform_base.c  transform_boss.c  transform_super.c  transform_test.c
ui/: CMakeLists.txt  ask_attack.c  entity_select_menu.c  progress_bar.c  prompt.c  scoreboard.c  strings.c  strings.h  ui.h  unicode_strlen.c
ui/color/: background.c  color.c  color.h  foreground.c  get_color_str.c
ui/console_manager/: bprintf.c  buffer.h  clear_screen.c  console.h  copy_buffer.c  create_buffer.c  delete_buffer.c  switch_buffer.c  validate_buffer.c
utils/: sleep.h
